<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg2"
    tools:context=".HomeActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>

    <include layout="@layout/content_main" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="750dp"
        android:orientation="vertical">

        <Space
            android:layout_width="match_parent"
            android:layout_height="120dp" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="match_parent"
            android:layout_height="244dp"
            app:srcCompat="@drawable/logo" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="36dp" />

        <Button
            android:id="@+id/btnSelect"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:background="@drawable/round_btn_blue"
            android:onClick="selectBtn"
            android:text="@string/btn_select"
            android:textColor="@android:color/background_light"
            android:textSize="18sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="40dp" />

        <Button
            android:id="@+id/btnIns"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:background="@drawable/round_btn_blue"
            android:onClick="lessdBtn"

            android:text="Lessons"
            android:textColor="@android:color/background_light"
            android:textSize="18sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="40dp" />

        <Button
            android:id="@+id/btnStat"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:background="@drawable/round_btn_blue"
            android:onClick="statBtn"
            android:text="@string/btn_stat"
            android:textColor="@android:color/background_light"
            android:textSize="18sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="40dp" />

        <Button
            android:id="@+id/btnFeed"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:background="@drawable/round_btn_blue"
            android:onClick="feedBtn"
            android:text="@string/btn_feed"
            android:textColor="@android:color/background_light"
            android:textSize="18sp" />

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>